manifests/modbus-controller/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: modbus-controller
  namespace: modbus-controller
spec:
  selector:
    app.kubernetes.io/name: modbus-controller
  ports:
    - name: http
      port: 8080
      targetPort: http
